Se unio el codigo de los tres

--- a/PartePC/Proyecto2IA/nbproject/project.properties
+++ b/PartePC/Proyecto2IA/nbproject/project.properties
@@ -30,10 +30,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.commons-codec-1.3.jar=C:\\Users\\Braulio\\Desktop\\Librerias\\commons-codec-1.3.jar
+file.reference.commons-codec-1.3.jar-1=..\\..\\librerias\\commons-codec-1.3.jar
 file.reference.jade.jar=C:\\Users\\Braulio\\Desktop\\Librerias\\jade.jar
+file.reference.jade.jar-1=..\\..\\librerias\\jade.jar
 file.reference.java-flac-encoder-0.3.7.jar=C:\\Users\\Braulio\\Desktop\\Librerias\\java-flac-encoder-0.3.7.jar
+file.reference.java-flac-encoder-0.3.7.jar-1=..\\..\\librerias\\java-flac-encoder-0.3.7.jar
 file.reference.java-json.jar=C:\\Users\\Braulio\\Desktop\\Librerias\\java-json.jar
-file.reference.pro2-librerias=../../librerias
+file.reference.java-json.jar-1=..\\..\\librerias\\java-json.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -41,7 +44,10 @@ javac.classpath=\
     ${file.reference.java-flac-encoder-0.3.7.jar}:\
     ${file.reference.jade.jar}:\
     ${file.reference.java-json.jar}:\
-    ${file.reference.pro2-librerias}
+    ${file.reference.commons-codec-1.3.jar-1}:\
+    ${file.reference.jade.jar-1}:\
+    ${file.reference.java-flac-encoder-0.3.7.jar-1}:\
+    ${file.reference.java-json.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
