--- a/PartePC/Proyecto2IA/nbproject/private/private.properties
+++ b/PartePC/Proyecto2IA/nbproject/private/private.properties
@@ -7,4 +7,4 @@ file.reference.java-flac-encoder-0.3.7.jar=/home/javier/NetBeansProjects/pro2/li
 file.reference.java-json.jar=/home/javier/NetBeansProjects/pro2/librerias/java-json.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/home/javier/.netbeans/8.1/build.properties
+user.properties.file=C:\\Users\\Braulio\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
