--- a/ParteRaspberry/RASPBERRYPI/nbproject/project.properties
+++ b/ParteRaspberry/RASPBERRYPI/nbproject/project.properties
@@ -29,11 +29,16 @@ dist.jar=${dist.dir}/RASPBERRYPI.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-codec-1.3.jar=..\\..\\librerias\\commons-codec-1.3.jar
+file.reference.jade.jar=..\\..\\librerias\\jade.jar
 file.reference.pi4j-core.jar=C:\\Users\\Braulio\\Desktop\\Librerias\\pi4j\\pi4j-core.jar
+file.reference.pi4j-core.jar-1=..\\..\\librerias\\pi4j-core.jar
 file.reference.pi4j-device.jar=C:\\Users\\Braulio\\Desktop\\Librerias\\pi4j\\pi4j-device.jar
+file.reference.pi4j-device.jar-1=..\\..\\librerias\\pi4j-device.jar
 file.reference.pi4j-gpio-extension.jar=C:\\Users\\Braulio\\Desktop\\Librerias\\pi4j\\pi4j-gpio-extension.jar
+file.reference.pi4j-gpio-extension.jar-1=..\\..\\librerias\\pi4j-gpio-extension.jar
 file.reference.pi4j-service.jar=C:\\Users\\Braulio\\Desktop\\Librerias\\pi4j\\pi4j-service.jar
-file.reference.pro2-librerias=../../librerias
+file.reference.pi4j-service.jar-1=..\\..\\librerias\\pi4j-service.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -43,7 +48,12 @@ javac.classpath=\
     ${file.reference.pi4j-device.jar}:\
     ${file.reference.pi4j-gpio-extension.jar}:\
     ${file.reference.pi4j-service.jar}:\
-    ${file.reference.pro2-librerias}
+    ${file.reference.commons-codec-1.3.jar}:\
+    ${file.reference.jade.jar}:\
+    ${file.reference.pi4j-core.jar-1}:\
+    ${file.reference.pi4j-device.jar-1}:\
+    ${file.reference.pi4j-gpio-extension.jar-1}:\
+    ${file.reference.pi4j-service.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
