Se agregó la funcion de encontrar a la victima y rescatarla (guiarla a la salida)

--- a/ParteRaspberry/RASPBERRYPI/nbproject/project.properties
+++ b/ParteRaspberry/RASPBERRYPI/nbproject/project.properties
@@ -33,6 +33,7 @@ file.reference.pi4j-core.jar=C:\\Users\\Braulio\\Desktop\\Librerias\\pi4j\\pi4j-
 file.reference.pi4j-device.jar=C:\\Users\\Braulio\\Desktop\\Librerias\\pi4j\\pi4j-device.jar
 file.reference.pi4j-gpio-extension.jar=C:\\Users\\Braulio\\Desktop\\Librerias\\pi4j\\pi4j-gpio-extension.jar
 file.reference.pi4j-service.jar=C:\\Users\\Braulio\\Desktop\\Librerias\\pi4j\\pi4j-service.jar
+file.reference.pro2-librerias=../../librerias
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -41,7 +42,8 @@ javac.classpath=\
     ${file.reference.pi4j-core.jar}:\
     ${file.reference.pi4j-device.jar}:\
     ${file.reference.pi4j-gpio-extension.jar}:\
-    ${file.reference.pi4j-service.jar}
+    ${file.reference.pi4j-service.jar}:\
+    ${file.reference.pro2-librerias}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
