--- a/PartePC/Proyecto2IA/nbproject/private/private.properties
+++ b/PartePC/Proyecto2IA/nbproject/private/private.properties
@@ -2,6 +2,9 @@ application.args=-gui AgentePC:Agentes.AgentePC;AgentePC2:Agentes.AgentePC2
 compile.on.save=true
 do.depend=false
 do.jar=true
+file.reference.commons-codec-1.3.jar=/home/javier/NetBeansProjects/pro2/librerias/java-flac-encoder-0.3.7.jar
+file.reference.java-flac-encoder-0.3.7.jar=/home/javier/NetBeansProjects/pro2/librerias/java-flac-encoder-0.3.7.jar
+file.reference.java-json.jar=/home/javier/NetBeansProjects/pro2/librerias/java-json.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Braulio\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+user.properties.file=/home/javier/.netbeans/8.1/build.properties
