--- a/PartePC/Proyecto2IA/nbproject/project.properties
+++ b/PartePC/Proyecto2IA/nbproject/project.properties
@@ -33,13 +33,15 @@ file.reference.commons-codec-1.3.jar=C:\\Users\\Braulio\\Desktop\\Librerias\\com
 file.reference.jade.jar=C:\\Users\\Braulio\\Desktop\\Librerias\\jade.jar
 file.reference.java-flac-encoder-0.3.7.jar=C:\\Users\\Braulio\\Desktop\\Librerias\\java-flac-encoder-0.3.7.jar
 file.reference.java-json.jar=C:\\Users\\Braulio\\Desktop\\Librerias\\java-json.jar
+file.reference.pro2-librerias=../../librerias
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.commons-codec-1.3.jar}:\
     ${file.reference.java-flac-encoder-0.3.7.jar}:\
     ${file.reference.jade.jar}:\
-    ${file.reference.java-json.jar}
+    ${file.reference.java-json.jar}:\
+    ${file.reference.pro2-librerias}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
