Cambios en el git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /PartePC/Proyecto2IA/dist/
 /ParteRaspberry/RASPBERRYPI/dist/
 /ParteRaspberry/RASPBERRYPI/build/
+/ProyectoCarpio/grafica.png
+/ProyectoCarpio/sourceGraphviz.dot
