Modificaciones hasta el 07 de mayo

--- a/PartePC/Proyecto2IA/nbproject/private/private.properties
+++ b/PartePC/Proyecto2IA/nbproject/private/private.properties
@@ -1,4 +1,4 @@
-application.args=-gui AgentePC:Agentes.AgentePC;AgentePC2:Agentes.AgentePC2
+application.args=-gui AgentePC:Agentes.AgentePC;AgentePC2:Agentes.AgentePC2;AgenteCHAT:Agentes.AgenteCHAT
 compile.on.save=true
 do.depend=false
 do.jar=true
