Se separo un proyecto para generar una libreria

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 /ParteRaspberry/RASPBERRYPI/build/
 /ProyectoCarpio/grafica.png
 /ProyectoCarpio/sourceGraphviz.dot
+/PRO2_IA_V2/nbproject/private/
+/PRO2_IA_V2/build/
+/PRO2_IA_V2/dist/
+/PRO2_IA-RaspAgente/nbproject/private/
