--- a/PRO2_IA-LibreriaRasp/nbproject/project.properties
+++ b/PRO2_IA-LibreriaRasp/nbproject/project.properties
@@ -1,10 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=RASPBERRYPI
-application.vendor=Braulio
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -25,25 +24,20 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/RASPBERRYPI.jar
+dist.jar=${dist.dir}/PRO2_IA-LibreriaRasp.jar
 dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=
 excludes=
-file.reference.commons-codec-1.3.jar=..\\..\\librerias\\commons-codec-1.3.jar
-file.reference.jade.jar=..\\..\\librerias\\jade.jar
-file.reference.pi4j-core.jar-1=..\\..\\librerias\\pi4j-core.jar
-file.reference.pi4j-device.jar-1=..\\..\\librerias\\pi4j-device.jar
-file.reference.pi4j-gpio-extension.jar-1=..\\..\\librerias\\pi4j-gpio-extension.jar
-file.reference.pi4j-service.jar-1=..\\..\\librerias\\pi4j-service.jar
+file.reference.pi4j-core.jar=../librerias/pi4j-core.jar
+file.reference.pi4j-device.jar=../librerias/pi4j-device.jar
+file.reference.pi4j-gpio-extension.jar=../librerias/pi4j-gpio-extension.jar
+file.reference.pi4j-service.jar=../librerias/pi4j-service.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.commons-codec-1.3.jar}:\
-    ${file.reference.jade.jar}:\
-    ${file.reference.pi4j-core.jar-1}:\
-    ${file.reference.pi4j-device.jar-1}:\
-    ${file.reference.pi4j-gpio-extension.jar-1}:\
-    ${file.reference.pi4j-service.jar-1}
+    ${file.reference.pi4j-core.jar}:\
+    ${file.reference.pi4j-device.jar}:\
+    ${file.reference.pi4j-gpio-extension.jar}:\
+    ${file.reference.pi4j-service.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -68,10 +62,8 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=raspberrypi.RASPBERRYPI
-manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
-mkdist.disabled=false
+mkdist.disabled=true
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
